Further cleanups of the dir_link documentation in the ext4 man page
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/misc/ext4.5.in
+++ b/misc/ext4.5.in
@@ -69,12 +69,14 @@ ext2 file systems.
 .TP
 .B dir_nlink
 .br
-Normally ext4 allows an inode to have no more than 65,000 hard links.
-This applies to files as well as directories, which means that there can
-be no more than 64,998 subdirectories in a directory (because each of
-the '..' entries counts as a hard link).  This feature lifts this limit
-by causing ext4 to use a links count of 1 to indicate that the number of
-hard links to a directory is not known.
+Normally, ext4 allows an inode to have no more than 65,000 hard links.
+This applies to regular files as well as directories, which means that
+there can be no more than 64,998 subdirectories in a directory (because
+each of the '.' and '..' entries, as well as the directory entry for the
+directory in its parent directory counts as a hard link).  This feature
+lifts this limit by causing ext4 to use a link count of 1 to indicate
+that the number of hard links to a directory is not known when the link
+count might exceed the maximum count limit.
 .TP
 .B encrypt
 .br
