--- a/debian/control.in
+++ b/debian/control.in
@@ -1,6 +1,3 @@
-define(MULTIARCH_HEADERS,ifdef(`DO_MULTIARCH',
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends},REMOVE_ME))dnl
 Source: e2fsprogs
 Section: admin
 Priority: required
@@ -56,7 +53,8 @@ Provides: libcomerr-kth-compat
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Architecture: any
-MULTIARCH_HEADERS
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Description: common error description library
  libcomerr is an attempt to present a common error-handling mechanism to
  manipulate the most common form of error code in a fashion that does not
@@ -81,7 +79,8 @@ Section: libs
 Depends: libcomerr2, ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Architecture: any
-MULTIARCH_HEADERS
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Description: command-line interface parsing library
  libss provides a simple command-line interface parser which will
  accept input from the user, parse the command into an argv argument
@@ -124,7 +123,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Provides: libext2fs2, libe2p2
 Architecture: any
-MULTIARCH_HEADERS
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Description: ext2/ext3/ext4 file system libraries
  The ext2, ext3 and ext4 file systems are successors of the original ext
  ("extended") file system. They are the main file system types used for
